--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2021"
 [dependencies]
 actix-files = "0.6.2"
 actix-web = "4.4.0"
+anyhow = "1.0.75"
+async-std = "1.12.0"
+chromiumoxide = "0.5.6"
 current_platform = "0.2.0"
