--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ actix-files = "0.6.2"
 actix-web = "4.4.0"
 anyhow = "1.0.75"
 async-std = "1.12.0"
-chromiumoxide = "0.5.6"
+# chromiumoxide = "0.5.6"
 current_platform = "0.2.0"
 futures = "0.3.29"
 open = "5.0.1"
