--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ actix-files = "0.6.2"
 actix-web = "4.4.0"
 anyhow = "1.0.75"
 async-std = "1.12.0"
-clap = "4.4.11"
+clap = { version = "4.4.11", features = ["derive"] }
 # chromiumoxide = "0.5.6"
 current_platform = "0.2.0"
 futures = "0.3.29"
