--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "live_server"
-version = "0.0.4"
+version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,4 +14,5 @@ clap = { version = "4.4.11", features = ["derive"] }
 # chromiumoxide = "0.5.6"
 current_platform = "0.2.0"
 futures = "0.3.29"
+local-ip-address = "0.5.6"
 open = "5.0.1"
