--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ actix-web = "4.4.0"
 anyhow = "1.0.75"
 async-std = "1.12.0"
 clap = { version = "4.4.11", features = ["derive"] }
+colored = "2.1.0"
 # chromiumoxide = "0.5.6"
 current_platform = "0.2.0"
 futures = "0.3.29"
