--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zippy"
-version = "0.1.0"
+version = "1.0.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,6 +8,21 @@ edition = "2021"
 [dependencies]
 js-sys = "0.3.66"
 leptos = { version = "0.5.2", features = ["csr", "nightly"] }
+leptos_icons = { version = "0.1.0", features = [
+    "AiCarryOutTwotone",
+    "BiGraphql",
+    "BiFilePlusSolid",
+    "Bs1Circle",
+    "BsFolder",
+    "BsSun",
+    "BsMoonStars",
+    "FaBarsSolid",
+    "ImPagebreak",
+    "ImPageBreak",
+    "IoColorWand",
+    "OcAlertSm",
+    "OcAlertLg"
+] }
 leptos_meta = { version = "0.5.2", features = ["csr", "nightly"] }
 leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
 web-sys = "0.3.65"
