--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -2,6 +2,16 @@
 name = "zippy"
 version = "1.0.2"
 edition = "2021"
+description = "A networking software."
+license = "MIT/Apache-2.0"
+authors = [
+    "imrany <imranmat254@gmail.com>",
+]
+repository = "https://github.com/imrany/zippy/web"
+readme = "README.md"
+categories = ["command-line-utilities", "wasm", "web-programming"]
+keywords = ["wasm", "bundler", "web", "build-tool", "compiler"]
+rust-version = "1.76.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
