--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -20,4 +20,4 @@ js-sys = "0.3.66"
 leptos = { version = "0.5.2", features = ["csr", "nightly"] }
 leptos_meta = { version = "0.5.2", features = ["csr", "nightly"] }
 leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
-web-sys = "0.3.65"
+web-sys = { version = "0.3.65", features = ["Navigator", "Window"] }
