--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -20,4 +20,15 @@ js-sys = "0.3.66"
 leptos = { version = "0.5.2", features = ["csr", "nightly"] }
 leptos_meta = { version = "0.5.2", features = ["csr", "nightly"] }
 leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
-web-sys = { version = "0.3.65", features = ["Navigator", "Window"] }
+serde = "1.0.195"
+serde_json = "1.0.111"
+wasm-bindgen-futures = "0.4.39"
+web-sys = { version = "0.3.65", features = [
+    "Navigator",
+    "Window",
+    'Headers',
+    'Request',
+    'RequestInit',
+    'RequestMode',
+    'Response',
+] }
