--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ open = "5.0.1"
 rand = "0.8.5"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+# tokio = { version = "1.35.1", features = ["full"] }
