--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "anvel"
-version = "1.0.2"
+version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,6 +16,7 @@ futures = "0.3.29"
 local-ip-address = "0.5.6"
 open = "5.0.1"
 rand = "0.8.5"
+reqwest = { version = "0.11.23", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 # tokio = { version = "1.35.1", features = ["full"] }
