--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "zippy"
-version = "1.0.2"
+name = "anvel"
+version = "0.1.0"
 edition = "2021"
 description = "A networking software."
 license = "MIT/Apache-2.0"
@@ -21,6 +21,7 @@ leptos = { version = "0.5.2", features = ["csr", "nightly"] }
 leptos_meta = { version = "0.5.2", features = ["csr", "nightly"] }
 leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
 serde = "1.0.195"
+# serde-wasm-bindgen = "0.6.3"
 serde_json = "1.0.111"
 wasm-bindgen-futures = "0.4.39"
 web-sys = { version = "0.3.65", features = [
