ui and ux update

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,16 @@
 name = "anvel"
 version = "0.1.0"
 edition = "2021"
+description = "Anvel is a productivity software that connects you to people in your network and enable file sharing and collaboration."
+license = "MIT License"
+authors = [
+    "imrany <imranmat254@gmail.com>",
+]
+repository = "https://github.com/imrany/zippy/web"
+readme = "README.md"
+categories = ["command-line-utilities", "wasm", "web-programming"]
+keywords = ["Anvel", "Productivity", "Network", "connect"]
+rust-version = "1.76.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
