--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -27,6 +27,7 @@ wasm-bindgen-futures = "0.4.39"
 web-sys = { version = "0.3.65", features = [
     "Navigator",
     "Window",
+    "Storage",
     'Headers',
     'Request',
     'RequestInit',
