--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,16 +18,18 @@ rust-version = "1.76.0"
 [dependencies]
 actix-cors = "0.7.0"
 actix-files = "0.6.2"
+actix-multipart = "0.6.1"
 actix-web = "4.4.0"
 anyhow = "1.0.75"
 async-std = "1.12.0"
 clap = { version = "4.4.11", features = ["derive"] }
 current_platform = "0.2.0"
 futures = "0.3.29"
+futures-util = "0.3.30"
 local-ip-address = "0.5.6"
 open = "5.0.1"
 rand = "0.8.5"
 reqwest = { version = "0.11.23", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
-# tokio = { version = "1.35.1", features = ["full"] }
+tokio = { version = "1.35.1", features = ["full"] }
