--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ futures-util = "0.3.30"
 local-ip-address = "0.5.6"
 open = "5.0.1"
 rand = "0.8.5"
-reqwest = { version = "0.11.23", features = ["json"] }
+reqwest = { version = "0.11.23", features = ["json", "multipart"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.35.1", features = ["full"] }
