--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -21,7 +21,7 @@ leptos = { version = "0.5.2", features = ["csr", "nightly"] }
 leptos_meta = { version = "0.5.2", features = ["csr", "nightly"] }
 leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
 serde = "1.0.195"
-# serde-wasm-bindgen = "0.6.3"
+serde-wasm-bindgen = "0.6.3"
 serde_json = "1.0.111"
 wasm-bindgen-futures = "0.4.39"
 web-sys = { version = "0.3.65", features = [
