--- a/react/public/manifest.json
+++ b/react/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "name":"Anvel",
     "short_name":"Anvel",
-    "description":"Anvel is a networking tool for file sharing.",
+    "description":"Anvel is a networking program for file sharing.",
     "display":"fullscreen",
     "orientation":"portrait",
     "start_url":"/",
