--- a/react/package.json
+++ b/react/package.json
@@ -12,11 +12,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
-    "react-select": "^5.8.0",
-    "react-toastify": "^10.0.4"
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
